[package]
name = "veai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
eframe = "*"
tokio = { version = "*", features = ["full"] }
env_logger = "*"
egui_extras = "0.28.1"
egui_code_editor = "0.2.9"
colorful = "0.2.2"
egui-winit = "0.28.1"
egui-wgpu = "0.28.1"
